# tetris-wasm-rust-react

source/: Cargo.toml
source/src/: game.rs  lib.rs  point.rs  tetrimino.rs  tetrimino_factory.rs
web/: README.md  package-lock.json  package.json
web/src/: App.tsx  WasmCanvas.tsx
