[package]
name = "source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.64"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2.7", features = ["js"] }
serde_json = "1.0.106"
serde = { version = "1.0", features = ["derive"] }
[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Event',
  'EventListener',
  'EventTarget',
  'FocusEvent',
  'KeyboardEvent',
  'UiEvent',
  'console'
]
